--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.11.1",
     "express-handlebars": "^1.1.0",
-    "mongoose": "^3.8.22",
-    "morgan": "^1.5.1"
+    "mongoose": "^4.4.7",
+    "morgan": "^1.5.1",
+    "util": "0.10.3"
   }
 }
